<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".Regist_Activity">



    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/wheat">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_top"/>
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/matricha"
        android:text="@string/enter_pass_two"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/pass_regist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="75dp"
            android:hint="@string/Pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/enter_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-30dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/Btn_Regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:onClick="Regist"
            android:text="@string/Regist_Account" />
    </FrameLayout>


</RelativeLayout>