<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".RegistFirst_Activity">


    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/wheat">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_top"/>


        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="Back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left|center"
            android:src="@drawable/arrow" />
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/matricha"
        android:text="@string/Regist_Account"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/surname_regist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="130dp"
            android:hint="@string/write_surname"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/name_regist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:hint="@string/write_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/mail_regist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-90dp"
            android:hint="@string/enter_mail"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Btn_Regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="next"
            android:layout_marginTop="190dp"
            android:text="@string/next"
            android:textSize="20dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:layout_alignParentBottom="true">

    </FrameLayout>

</RelativeLayout>