<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".InAcc_Activity">


    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/wheat">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_top"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/body"
        android:layout_below="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:textSize="35sp"
            android:fontFamily="@font/matricha"
            android:text="@string/In_Account"
            android:maxLines="1" />

        <EditText
            android:id="@+id/mail"
            android:layout_marginBottom="110dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/In_acc"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/pass"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/Pass"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <Button
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="In_account"
            android:hint="@string/Pass" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:layout_marginTop="50dp"
            android:onClick="In_create_account"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="16dp"/>
    </FrameLayout>

</RelativeLayout>