<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EnterResestPassword">

    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/wheat">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_top"/>


        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="Back_resest"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left|center"
            android:src="@drawable/arrow" />
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/matricha"
        android:text="@string/ResestPass"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/pass_res"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:hint="@string/enter_pass"/>

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:hint="@string/confirm_pass"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resest_pass"
            android:layout_marginTop="190dp"
            android:hint="@string/confirm_pass"/>


    </FrameLayout>



</RelativeLayout>